# [1.3.0]
  - Añadido al endpoint de editar factura, la posibilidad de editar la información de pago

# [1.2.1] - 02/05/2021
  - Añadido número de facturas trimestrales a la facturación

# [1.2.0] - 18/04/2021
  - Corregido el error del contador de albaranes, no sumaba bien los albaranes con la fecha del primer dia del trimestre
  - Añadido número de facturas del año en el listado de clientes
  - Corregido el orden de facturas en el libro de clientes

# [1.1.1] - 16/03/2021
  - Actualización de librerias

# [1.1.0] - 27/02/2021
  - Añadida búsqueda de albaranes por canal

# [1.0.2]
  - Corregida zona horaria en el Dockerfile

# [1.0.1]
  - Corregido fallo de redondeo al comparar si ha cambiado el precio del producto

# [1.0.0]
  - Primera versión estable